hphp/hack/test/typecheck/new_inference/odersky2.php.like_types.exp
File "odersky2.php", line 24, characters 10-124:
Invalid return type (Typing[4323])
File "odersky2.php", line 5, characters 25-26:
Some type constraint(s) are violated here
File "odersky2.php", line 5, characters 25-26:
Tb is a constrained type parameter
File "odersky2.php", line 23, characters 55-64:
Expected MyList<Tc>
File "odersky2.php", line 5, characters 25-26:
But got dynamic
